--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,8 @@
         </footer>
     </div>
     <script src="{% static 'js/buscador.js' %}"></script>
-    <script src="{% static 'js/validar.js' %}"></script>
+    <script src="{% static 'js/validar_equipo.js' %}"></script>
+    <script src="{% static 'js/validar_empleado.js' %}"></script>
     <script src="{% static 'js/modificarTamaño.js' %}"></script>
 
 
