--- a/templates/base.html
+++ b/templates/base.html
@@ -97,8 +97,7 @@
     <script src="{% static 'js/buscador.js' %}"></script>
     <script src="{% static 'js/validar_equipo.js' %}"></script>
     <script src="{% static 'js/validar_empleado.js' %}"></script>
+    <script src="{% static 'js/validar_proceso.js' %}"></script>
     <script src="{% static 'js/modificarTamaño.js' %}"></script>
-
-
 </body>
 </html>
