Appi fetch (a medias)

--- a/templates/base.html
+++ b/templates/base.html
@@ -98,5 +98,6 @@
     <script src="{% static 'js/validar_equipo.js' %}"></script>
     <script src="{% static 'js/validar_empleado.js' %}"></script>
     <script src="{% static 'js/modificarTamaño.js' %}"></script>
+    <script src="{% static 'js/fetchAPI.js' %}"></script>
 </body>
 </html>
